--- a/root/fields/templates/html/status_chart_pie.html
+++ b/root/fields/templates/html/status_chart_pie.html
@@ -19,9 +19,9 @@
                         }
                 )->hashref->all;     
     
-    my @status_names =  map {lc ($_)} split(',', $meta->{filter});    
+    
     my @topics_by_status = DB->BaliTopic->search(
-                        {mid => \@topics ,  'LOWER(status.name)' => \@status_names},
+                        {mid => \@topics},
                         {
                           join     => [qw/ status /],
                           select   => [ 'status.name', { count => 'status.id' }, 'status.color','status.id' ],
@@ -30,9 +30,36 @@
                         }
     )->hashref->all;
     
+    my @filter_topics_by_status;
+    my @filter_status_names =  map {lc ($_)} split(',', $meta->{filter});
+    
+    if(@filter_status_names){
+        my %status_names;
+        map {$status_names{lc ($_)} = 1 } @filter_status_names;
+        
+        @filter_topics_by_status = grep { exists $status_names{lc($_->{status})}} @topics_by_status ;
+        my @others_topics_by_status = grep { !exists $status_names{lc($_->{status})}} @topics_by_status ;
+        
+        my $others_total;
+        my @others_id;
+        my $others_id;
+        
+        map {
+            $others_total += $_->{total};
+            push @others_id, $_->{status_id};
+        
+        } @others_topics_by_status;
+        
+        $others_id = join ',', @others_id;
+        push @filter_topics_by_status, { color => '#000000', status => 'Others', status_id => $others_id, total => $others_total};
+    }
+    else{
+        @filter_topics_by_status = @topics_by_status;
+    }
+    
 </%perl>
 
-% if(@topics_by_status){
+% if(@filter_topics_by_status){
 	<div id='boot' style="clear:left;" >
 		<b><%$meta->{name_field}%></b><br>
 		<div id="<%$graph_id%>" 
@@ -48,9 +75,9 @@
     var data = new Array();
     var status_id = new Array();
 
-%foreach my $topic (_array @topics_by_status){
+%foreach my $topic (_array @filter_topics_by_status){
         data.push({ label: "<% _loc($topic->{status}) %>", status_id: "<%$topic->{status_id}%>", color:"<%$topic->{color}%>", data: [[1,<%$topic->{total}%>]]});
-        status_id["<%$topic->{status}%>"] = <%$topic->{status_id}%>;
+        status_id["<%$topic->{status}%>"] = '<%$topic->{status_id}%>';
 %}
 
         // DEFAULT
@@ -105,7 +132,6 @@
     topic_list.push(<% $mid %>);
 %}                   
                 
-
         var name = Baseliner.topic_title( '<%$data->{topic_mid}%>', '<% $data->{name_category} %>', '<% $data->{color_category} %>', true); //, literal_only, id) {        
                 
         var title_status = '<div id="boot" style="background:transparent;height:14px"><span class="label" style="background-color:' + obj.series.color  + '">' + name + ' => ' + obj.series.label + '</span></div>';
