--- a/root/fields/templates/html/status_changes.html
+++ b/root/fields/templates/html/status_changes.html
@@ -3,20 +3,7 @@
     $data
 </%args>
 <%perl>
-    my @status_changes;
-    my $cont = 0;
-    use Try::Tiny;
-    DB->BaliEvent->search({ event_key=>'event.topic.change_status', mid=>$data->{topic_mid}},
-    { order_by=>{ -desc=>'ts' } })->hashref->each( sub {
-        if ($cont++ < 10) {
-            try {
-                my $ed = _load( $_->{event_data} );
-                push @status_changes, { old_status=>$ed->{old_status}, status=>$ed->{status}, username=>$ed->{username}, when=>Class::Date->new( $_->{ts} ) };
-            
-            } catch {};
-        }
-    });
-
+    my @status_changes = Baseliner->model('Topic')->status_changes( $data );
 </%perl>
 % if( !$meta->{hidden}  ) {
     <ul class="nav nav-list">
